--- a/fourwinds/static/css/fourwinds.css
+++ b/fourwinds/static/css/fourwinds.css
@@ -29,9 +29,10 @@
     font-style: normal;
 }
 
-#page{
+/*#page{
     max-width: 2000px;
     margin: 0 auto;
+}*/
 
 
 }
@@ -42,9 +43,9 @@
 .bold-regular{
     font-family: gotham-bold-regular;
 }
-.container{
+/*.container{
     max-width: 1100px;
-}
+}*/
 .box{
     background: #eeeeee;
 }
