restore homepage template

--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -134,6 +134,14 @@ p {
   color: #333 !important;
 }
 
+/* line 83, ../sass/_header.scss */
+.navbar {
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 0px;
+  border: 0px;
+}
+
 /* line 1, ../sass/_landing.scss */
 .masthead {
   background-image: url("../images/header.png");
