--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -7,6 +7,6 @@
 {% block content %}
     {% main_slider calling_page=page %}
     {{ page.body|richtext }}
-
+    {% travel_categories %}
     {% testimonials_slider calling_page=self %}
 {% endblock %}
