--- a/website/templates/website/website_travel_category_index_page.html
+++ b/website/templates/website/website_travel_category_index_page.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags static home_tags%}
+{% load wagtailcore_tags wagtailimages_tags home_tags static%}
 
-{% block body_class %}template-blogindexpage{% endblock %}
+{% block body_class %}template-travelcategoryindexpage{% endblock %}
 
 {% block content %}
     <div id="travel">
         {% travel_carousel calling_page=self %}
-
         <div class="events container">
             <h3 class="pull-left">UPCOMING EVENTS</h3>
             <div class="form-group pull-right col-sm-3">
@@ -42,15 +41,8 @@
     </div>
     {% testimonials_slider calling_page=self %}
 {% endblock %}
+
 {% block extra_js %}
-
-<script type="text/javascript">
-function filter_events(e){
-    var val = $(e.currentTarget).val()
-    window.location.href = '{% pageurl page %}?year='+val
-};
-
-</script>
 <script src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
 <script type="text/javascript">
 $(document).ready(function() {
