--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -195,6 +195,7 @@
 
         <script src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
         <script src="{% static 'js/jquery.bootstrap-dropdown-hover.min.js' %}"></script>
+        <script src="{% static 'js/carousel.config.js' %}"></script>
         <script type="text/javascript">
         function jcarousel_move(left){
             var direction = "+=1";
@@ -203,20 +204,20 @@
             }
             $('.jcarousel').jcarousel('scroll',direction);
         }
-        $(document).ready(function(){
-            $('.jcarousel').jcarousel({
-                list: '.jcarousel-list',
-                items: '.jcarousel-item'
-            });
-            $('#top-navbar #travel-link').on('mouseover', function(e){
-                $('#top-navbar > [data-toggle="dropdown"]').trigger('mouseover');
-            });
-            $('#top-navbar #travel-dropdown-button');
-            $('#top-navbar > [data-toggle="dropdown"]').bootstrapDropdownHover({
-              // see next for specifications
-            });
-{#            $("#travel-menu").load("{% url 'travel_info' %}");#}
-        });
+//         $(document).ready(function(){
+//             $('.jcarousel').jcarousel({
+//                 list: '.jcarousel-list',
+//                 items: '.jcarousel-item'
+//             });
+//             $('#top-navbar #travel-link').on('mouseover', function(e){
+//                 $('#top-navbar > [data-toggle="dropdown"]').trigger('mouseover');
+//             });
+//             $('#top-navbar #travel-dropdown-button');
+//             $('#top-navbar > [data-toggle="dropdown"]').bootstrapDropdownHover({
+//               // see next for specifications
+//             });
+// {#            $("#travel-menu").load("{% url 'travel_info' %}");#}
+//         });
         </script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
         <script type="text/javascript">
