--- a/website/templates/website/website_travel_page.html
+++ b/website/templates/website/website_travel_page.html
@@ -5,11 +5,19 @@
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <h1 class="title">{{ page.title }}</h1>
+    <div class="container event-page">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="event">
+                    <h1 class="title">{{ page.title }}</h1>
 
-        <div>{{ page.text|richtext }}</div>
+                    <div>{{ page.text|richtext }}</div>
 
-        <p><a class="btn btn-link" href="{{ page.get_parent.url }}">Return to Travel</a></p>
+                    <div class="learn-more">
+                        <a href="{{ page.get_parent.url }}">Return to Travel</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
