--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -152,3 +152,11 @@
         margin-right: 17px;
     }
 }
+
+.blog-img {
+    width: 100%;
+    overflow: hidden;
+    img {
+        width: 100%;
+    }
+}
