--- a/home/templates/home/tags/qoute_form.html
+++ b/home/templates/home/tags/qoute_form.html
@@ -1,9 +1,5 @@
 <div class="col-md-3">
    <div class="cta">
-       <div class="text-center">
-            <a href="#" class="cta-button">Get my Free Quote</a>
-            <p class="or">OR</p>
-       </div>
        <div class="cta-form">
            <div class="form-title">
                Quick quote form
@@ -22,7 +18,10 @@
                   </select>
                </div>
                <div class="form-group">
-                   <input type="text" name="" placeholder="School name" class="form-control">
+                   <input type="email" name="" placeholder="Email" class="form-control">
+               </div>
+               <div class="form-group">
+                   <input type="text" name="" placeholder="Phone Number" class="form-control">
                </div>
                <div class="text-center">
                    <button class="btn">Get Quick Quote</button>
