fix travels height

--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -91,6 +91,10 @@
         .sub-articles {
             padding: 0;
         }
+        .rich-text {
+            height: 120px;
+            overflow: hidden;
+        }
     }
 }
 
