--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -299,48 +299,53 @@ have a fixed width and height (but it's not required).
 .articles .sub-articles .sub-articles {
   padding: 0;
 }
+/* line 94, ../sass/_landing.scss */
+.articles .sub-articles .rich-text {
+  height: 120px;
+  overflow: hidden;
+}
 
-/* line 98, ../sass/_landing.scss */
+/* line 102, ../sass/_landing.scss */
 .sub-articles img {
   max-width: 100%;
   max-height: 134px;
   overflow: hidden;
 }
 
-/* line 105, ../sass/_landing.scss */
+/* line 109, ../sass/_landing.scss */
 .testimonials {
   margin-top: 40px;
 }
-/* line 107, ../sass/_landing.scss */
+/* line 111, ../sass/_landing.scss */
 .testimonials .title {
   font-family: "gothammedium";
   margin-bottom: 40px;
 }
-/* line 111, ../sass/_landing.scss */
+/* line 115, ../sass/_landing.scss */
 .testimonials .rich-text p {
   font-family: "Playfair-Display";
   font-style: italic;
   line-height: 2;
 }
-/* line 115, ../sass/_landing.scss */
+/* line 119, ../sass/_landing.scss */
 .testimonials .rich-text p span {
   font-size: 2em;
 }
-/* line 118, ../sass/_landing.scss */
+/* line 122, ../sass/_landing.scss */
 .testimonials .rich-text p img {
   display: block;
   max-width: 100%;
   height: auto;
 }
-/* line 124, ../sass/_landing.scss */
+/* line 128, ../sass/_landing.scss */
 .testimonials .customer {
   padding-left: 25%;
 }
-/* line 126, ../sass/_landing.scss */
+/* line 130, ../sass/_landing.scss */
 .testimonials .customer .name {
   font-size: 14px;
 }
-/* line 130, ../sass/_landing.scss */
+/* line 134, ../sass/_landing.scss */
 .testimonials .more-testimonials {
   background-color: #0d2633;
   border-radius: 100px;
@@ -351,7 +356,7 @@ have a fixed width and height (but it's not required).
   line-height: 30px;
   font-family: gotham-bold-regular;
 }
-/* line 140, ../sass/_landing.scss */
+/* line 144, ../sass/_landing.scss */
 .testimonials .more-testimonials:hover {
   color: #fff;
 }
