--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -143,5 +143,15 @@
     }
     .more-testimonials:hover {
     color: #fff;
+    }
 }
+
+.homepage-body-content {
+    background: $smoke;
+    padding: 40px;
+    color: $dark-indigo;
 }
+
+
+
+
