--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -7,5 +7,14 @@
 {% block content %}
     {% main_slider calling_page=page %}
     {% travel_categories %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="homepage-body-content">
+                    {{page.body|richtext}}
+                </div>
+            </div>
+        </div>
+    </div>
     {% testimonials_slider calling_page=self %}
 {% endblock %}
