--- a/home/templates/home/tags/main_slider.html
+++ b/home/templates/home/tags/main_slider.html
@@ -10,6 +10,9 @@
                 {% if forloop.counter0 == 0 %}
                 <div class="carousel-caption">
                     <img src="{% static 'img/slideshow/travel-is-education.png' %}" alt="">
+                    <div class="text-center cta">
+                        <a href="#" class="cta-button">Browse Tours</a>
+                    </div>
                 </div>
                 {% endif %}
             </div>
