--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -161,3 +161,12 @@
         width: 100%;
     }
 }
+
+.margin-t-20 {
+    margin-top: 20px;
+}
+
+.submit-btn {
+    background-color: #01bdc9;
+    color: #000;
+}
