--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -35,7 +35,7 @@
     .cta-form {
         border: solid 1px #eeeeee;
         .form-title {
-            background: $smoke;
+            background: $yellow;
             padding-top: 14px;
             padding-bottom: 14px;
             text-align: center;
@@ -51,7 +51,7 @@
                 box-shadow: none;
             }
             button {
-                background-color: $dark-indigo;
+                background-color: $cyan;
                 border-radius: 100px;
                 color: $white;
                 padding: 7px 16px;
