--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -2,7 +2,7 @@
    <div class="cta">
        <div class="cta-form">
            <div class="form-title">
-               Quick quote form
+               Quick contact form
            </div>
            <form class="">
                <div class="form-group">
@@ -14,7 +14,6 @@
                <div class="form-group">
                   <select class="form-control">
                       <option>Select your role</option>
-                      <option>Select your role</option>
                   </select>
                </div>
                <div class="form-group">
@@ -24,7 +23,7 @@
                    <input type="text" name="" placeholder="Phone Number" class="form-control">
                </div>
                <div class="text-center">
-                   <button class="btn">Get Quick Quote</button>
+                   <button class="btn">Get started</button>
                </div>
            </form>
        </div>
