--- a/website/templates/website/website_internal_content_page.html
+++ b/website/templates/website/website_internal_content_page.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            {% qoute_form %}
+            {% quick_contact_form %}
             <div class="col-md-6 articles">
                 <div class="article">
                     {{ page.body|richtext }}
