--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -569,3 +569,31 @@ have a fixed width and height (but it's not required).
   background-color: #01bdc9;
   color: #000;
 }
+
+/* line 174, ../sass/_pages.scss */
+.tours-container {
+  margin-top: 20px;
+}
+/* line 177, ../sass/_pages.scss */
+.tours-container .panel .panel-heading {
+  padding: 0px;
+}
+/* line 179, ../sass/_pages.scss */
+.tours-container .panel .panel-heading .panel-image {
+  width: 100%;
+  height: 217.5px;
+  overflow: hidden;
+}
+/* line 186, ../sass/_pages.scss */
+.tours-container .panel .panel-body h3 {
+  margin-top: 0px;
+  text-align: center;
+}
+/* line 190, ../sass/_pages.scss */
+.tours-container .panel .panel-body p {
+  text-align: center;
+}
+/* line 193, ../sass/_pages.scss */
+.tours-container .panel .panel-body .view-tour {
+  text-align: center;
+}
