--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -170,3 +170,29 @@
     background-color: #01bdc9;
     color: #000;
 }
+
+.tours-container {
+    margin-top: 20px;
+    .panel {
+        .panel-heading {
+            padding: 0px;
+            .panel-image {
+                width: 100%;
+                height: 217.5px;
+                overflow: hidden;
+            }
+        }
+        .panel-body {
+            h3 {
+                margin-top: 0px;
+                text-align: center;
+            }
+            p {
+                text-align: center;
+            }
+            .view-tour {
+                text-align: center;
+            }
+        }
+    }
+}
