--- a/website/templates/website/tags/get_a_quote_form.html
+++ b/website/templates/website/tags/get_a_quote_form.html
@@ -1,81 +1,76 @@
-<form>
-    <div class="row">
-    <div class="form-group">
-        <div class="col-md-6">
-            <label>Firstname:</label>
-            <input type="text" class="form-control" name="first_name" required>
-        </div>
-        <div class="col-md-6">
-            <label>Lastname:</label>
-            <input type="text" class="form-control" name="last_name" required>
-        </div>
-         <div class="col-md-6">
-            <label>Email address:</label>
-            <input type="email" class="form-control" name="email" required>
-        </div>
-        <div class="col-md-6">
-            <label>Phone number:</label>
-            <input type="number" class="form-control" name="phone_num" required>
-        </div>
-        <div class="col-md-6">
-            <label>School name:</label>
-            <input type="text" class="form-control" name="school_name" required>
-        </div>
-        <div class="col-md-6">
-            <label>School ZIP:</label>
-            <input type="number" class="form-control" name="school_zip" required>
-        </div>
-        <div class="col-md-6">
-            <label>Code role:</label>
-            <select name="code_role" class="form-control" required>
-                <option value="">Please select</option>
-                <option value="teacher">Teacher</option>
-                <option value="student">Student</option>
-                <option value="parent">Parent</option>
-                <option value="administrator">Administrator</option>
-            </select>
-        </div>
-        <div class="col-md-6">
-            <label>Type of trip:</label>
-            <select name="trip_type" class="form-control" required>
-                <option value="">Please select</option>
-                <option value="band">Band</option>
-                <option value="orchestra">Orchestra</option>
-                <option value="chorus">Chorus</option>
-                <option value="senior">Senior</option>
-                <option value="international">International</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
-        <div class="col-md-6">
-            <label>Estimated trip year:</label>
-            <select name="trip_type" class="form-control" required>
-                <option value="">Please select</option>
-                <option value="2017">2017</option>
-                <option value="2018">2018</option>
-                <option value="2019">2019</option>
-            </select>
-        </div>
-        <div class="col-md-6">
-            <label>Desired destination:</label>
-            <input type="text" class="form-control" name="destination" required>
-        </div>
-        <div class="col-md-6">
-            <label>Number of students:</label>
-            <input type="number" class="form-control" name="student_number" required>
-        </div>
-        <div class="col-md-6">
-            <label>Approximate budget:</label>
-            <input type="number" class="form-control" name="budget" required>
-        </div>
-        <div class="col-md-12">
-            <label>Comments:</label>
-            <textarea class="form-control" name="comments"></textarea>
-        </div>
-        <div class="col-md-12">
-            <hr>
-            <button type="submit" class="btn btn-lg submit-btn pull-right">Finish</button>
-        </div>
+<div class="row">
+<div class="form-group">
+    <div class="col-md-6">
+        <label for="id_firstname">Firstname:</label><input id="id_firstname" maxlength="255" name="firstname" type="text" required="" class="form-control">
     </div>
+    <div class="col-md-6">
+        <label for="id_lastname">Lastname:</label>
+        <input id="id_lastname" maxlength="255" name="lastname" type="text" required="" class="form-control">
     </div>
-</form>
+     <div class="col-md-6">
+        <label for="id_email-address">Email address:</label>
+        <input id="id_email-address" name="email-address" type="email" required="" class="form-control">
+    </div>
+    <div class="col-md-6">
+        <label for="id_phone-number">Phone number:</label>
+        <input id="id_phone-number" name="phone-number" step="any" type="number" required="" class="form-control">
+    </div>
+    <div class="col-md-6">
+        <label for="id_school-name">School name:</label>
+        <input id="id_school-name" maxlength="255" name="school-name" type="text" required="" class="form-control">
+    </div>
+    <div class="col-md-6">
+        <label for="id_school-zip">School ZIP:</label>
+        <input id="id_school-zip" name="school-zip" step="any" type="number" required="" class="form-control">
+    </div>
+    <div class="col-md-6">
+        <label for="id_code-role">Code role:</label>
+        <select id="id_code-role" name="code-role" required="" class="form-control">
+            <option value="">Please choose</option>
+            <option value="Teacher">Teacher</option>
+            <option value="Student">Student</option>
+            <option value="Parent">Parent</option>
+            <option value="Administrator">Administrator</option>
+        </select>
+    </div>
+    <div class="col-md-6">
+        <label for="id_type-of-trip">Type of trip:</label>
+        <select id="id_type-of-trip" name="type-of-trip" required="" class="form-control">
+            <option value="">Please choose</option>
+            <option value="Band">Band</option>
+            <option value="Orchestra">Orchestra</option>
+            <option value="Chorus">Chorus</option>
+            <option value="Senior">Senior</option>
+            <option value="International">International</option>
+            <option value="Other">Other</option>
+        </select>
+    </div>
+    <div class="col-md-6">
+        <label for="id_estimated-trip-year">Estimated trip year:</label>
+        <select id="id_estimated-trip-year" name="estimated-trip-year" required="" class="form-control">
+            <option value="">Please choose</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
+            <option value="2019">2019</option>
+        </select>
+    </div>
+    <div class="col-md-6">
+        <label for="id_desired-destination">Desired destination:</label>
+        <input id="id_desired-destination" maxlength="255" name="desired-destination" type="text" required="" class="form-control">
+    </div>
+    <div class="col-md-6">
+        <label for="id_number-of-students">Number of students:</label><input id="id_number-of-students" name="number-of-students" step="any" type="number" required="" class="form-control">
+    </div>
+    <div class="col-md-6">
+        <label for="id_approximate-budget">Approximate budget:</label><input id="id_approximate-budget" name="approximate-budget" step="any" type="number" required="" class="form-control">
+    </div>
+    <div class="col-md-12">
+        <label for="id_comments">Comments:</label>
+        <textarea cols="40" id="id_comments" name="comments" rows="10" required="" class="form-control"></textarea></form>
+    </div>
+    <div class="col-md-12">
+        <hr>
+        <button type="submit" class="btn btn-lg submit-btn pull-right">Finish</button>
+    </div>
+</div>
+</div>
