--- a/website/templates/website/website_get_quote_page_landing.html
+++ b/website/templates/website/website_get_quote_page_landing.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="homepage-body-content">
+                <div class="homepage-body-content margin-t-20">
                     {{ page.success_text | richtext }}
                     <a href="{{ page.url }}">Go back</a>
                 </div>
