--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -154,15 +154,15 @@ have a fixed width and height (but it's not required).
   background-color: white;
 }
 /* line 51, ../sass/_header.scss */
-.main-nav .dropdown:hover .dropdown-menu {
+.main-nav .dropdown:hover .main-children {
   display: block;
 }
 /* line 54, ../sass/_header.scss */
-.main-nav .dropdown:hover .dropdown-menu li a {
+.main-nav .dropdown:hover .main-children li a {
   color: #333;
 }
 /* line 56, ../sass/_header.scss */
-.main-nav .dropdown:hover .dropdown-menu li a:hover {
+.main-nav .dropdown:hover .main-children li a:hover {
   background-color: #e8e8e8;
   background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
   background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
@@ -198,14 +198,6 @@ have a fixed width and height (but it's not required).
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
   background-repeat: repeat-x;
   color: #333 !important;
-}
-
-/* line 103, ../sass/_header.scss */
-.navbar {
-  position: relative;
-  min-height: 50px;
-  margin-bottom: 0px;
-  border: 0px;
 }
 
 /* line 1, ../sass/_landing.scss */
