--- a/fourwinds/static/sass/_header.scss
+++ b/fourwinds/static/sass/_header.scss
@@ -48,7 +48,7 @@
     }
     .dropdown{
         &:hover {
-            .dropdown-menu {
+            .main-children {
                 display: block;
                 li {
                     a {
@@ -67,42 +67,35 @@
                 }
             }
         }
-    	&.open{
-    		.dropdown-toggle{
-    			    background-image: -webkit-linear-gradient(top,#dbdbdb 0,#e2e2e2 100%);
-				    background-image: -o-linear-gradient(top,#dbdbdb 0,#e2e2e2 100%);
-				    background-image: -webkit-gradient(linear,left top,left bottom,from(#dbdbdb),to(#e2e2e2));
-				    background-image: linear-gradient(to bottom,#dbdbdb 0,#e2e2e2 100%);
-				    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdbdbdb', endColorstr='#ffe2e2e2', GradientType=0);
-				    background-repeat: repeat-x;
-				    -webkit-box-shadow: inset 0 3px 9px rgba(0,0,0,.075);
-				    box-shadow: inset 0 3px 9px rgba(0,0,0,.075);
-				    color: #00b19f;
-    		}
-    		.dropdown-menu {
-    			li {
-    				a {
-    					color: #333;
-    					&:hover {
-    						    background-color: #e8e8e8;
-							    background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-							    background-image: -o-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-							    background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#e8e8e8));
-							    background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
-							    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
-							    background-repeat: repeat-x;
-							    color: #333!important;
-    					}
-    				}
-    			}
-    		}
-    	}
+        &.open{
+            .dropdown-toggle{
+                    background-image: -webkit-linear-gradient(top,#dbdbdb 0,#e2e2e2 100%);
+                    background-image: -o-linear-gradient(top,#dbdbdb 0,#e2e2e2 100%);
+                    background-image: -webkit-gradient(linear,left top,left bottom,from(#dbdbdb),to(#e2e2e2));
+                    background-image: linear-gradient(to bottom,#dbdbdb 0,#e2e2e2 100%);
+                    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdbdbdb', endColorstr='#ffe2e2e2', GradientType=0);
+                    background-repeat: repeat-x;
+                    -webkit-box-shadow: inset 0 3px 9px rgba(0,0,0,.075);
+                    box-shadow: inset 0 3px 9px rgba(0,0,0,.075);
+                    color: #00b19f;
+            }
+            .dropdown-menu {
+                li {
+                    a {
+                        color: #333;
+                        &:hover {
+                                background-color: #e8e8e8;
+                                background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
+                                background-image: -o-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
+                                background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#e8e8e8));
+                                background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
+                                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
+                                background-repeat: repeat-x;
+                                color: #333!important;
+                        }
+                    }
+                }
+            }
+        }
     }
-}
-
-.navbar {
-    position: relative;
-    min-height: 50px;
-    margin-bottom: 0px;
-    border: 0px;
 }
