--- a/home/templates/home/tags/top_menu.html
+++ b/home/templates/home/tags/top_menu.html
@@ -30,7 +30,7 @@
             {% for menuitem in menuitems %}
                 <li class="top-navbar-item {% if menuitem.show_dropdown %}dropdown{% endif %}{% if menuitem.active %} active{% endif %}">
                     {% if menuitem.show_dropdown %}
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ menuitem.title }} <span class="icon ion-arrow-down-b"></span></a>
+                        <a data-toggle="dropdown" class="dropdown-toggle parent-menu" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ menuitem.title }} <span class="icon ion-arrow-down-b"></span></a>
                         {% top_menu_children parent=menuitem %}
                     {% else %}
                         <a href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
@@ -40,4 +40,6 @@
         </ul>
     </div>
 </nav>
+
+
 {#        end top menu#}
