--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -2,7 +2,7 @@
    <div class="cta">
        <div class="cta-form">
            <div class="form-title">
-               Quick contact form
+               Quick Contact Form
            </div>
            <form class="">
                <div class="form-group">
@@ -23,7 +23,7 @@
                    <input type="text" name="" placeholder="Phone Number" class="form-control">
                </div>
                <div class="text-center">
-                   <button class="btn">Get started</button>
+                   <button class="btn">Get Started</button>
                </div>
            </form>
        </div>
